# libmr

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  gitversion.pri  mr.pro  readme.md
cmake/: AddGitVersion.cmake  ConfigureVersionCppFromGit.cmake  RequireOutOfSourceBuild.cmake
demo/: CMakeLists.txt  main.cpp
include/mr/: algo  common  common.h  qt  timer  version
src/: Timer.cpp  Timer.h  assert.cpp  assert.h  codejam.h  file-util.h  log.cpp  log.h  pempek_assert.cpp  qt-app.cpp  qt-app.h  qt-file.h  qt-string.cpp  qt-string.h  qt-util.cpp  qt-util.h  random.cpp  random.h  string-util.cpp  string-util.h  vector.h  version.cpp  version.cpp.in  version.h
src/algo/: BoolFlags.h  Heap.h  IdSet.cpp  IdSet.h
src/common/: assert.cpp  assert.h  codejam.h  constants.h  log.cpp  log.h  pempek_assert.cpp  pempek_assert.h  random.cpp
src/qt/: qt-app.cpp  qt-app.h  qt-file.h  qt-log.cpp  qt-string.cpp  qt-string.h
src/util/: Timer.cpp  Timer.h  Version.cpp  Version.h  VersionInfo.h  const_string.h
